lib/ffi/ffi_webgpu.dart


  WGpuRenderBundleEncoder wgpu_device_create_render_bundle_encoder(
    WGpuDevice device,
    ffi.Pointer<WGpuRenderBundleEncoderDescriptor> renderBundleEncoderDesc,
  ) {
    return _wgpu_device_create_render_bundle_encoder(
      device,
      renderBundleEncoderDesc,
    );
  }

  late final _wgpu_device_create_render_bundle_encoderPtr = _lookup<
          ffi.NativeFunction<
              WGpuRenderBundleEncoder Function(
                  WGpuDevice, ffi.Pointer<WGpuRenderBundleEncoderDescriptor>)>>(
      'wgpu_device_create_render_bundle_encoder');
  late final _wgpu_device_create_render_bundle_encoder =
      _wgpu_device_create_render_bundle_encoderPtr.asFunction<
          WGpuRenderBundleEncoder Function(
              WGpuDevice, ffi.Pointer<WGpuRenderBundleEncoderDescriptor>)>();

  WGpuQuerySet wgpu_device_create_query_set(
    WGpuDevice device,
    ffi.Pointer<WGpuQuerySetDescriptor> querySetDesc,
  ) {
    return _wgpu_device_create_query_set(
      device,
      querySetDesc,
    );
  }

  late final _wgpu_device_create_query_setPtr = _lookup<
          ffi.NativeFunction<
              WGpuQuerySet Function(
                  WGpuDevice, ffi.Pointer<WGpuQuerySetDescriptor>)>>(
      'wgpu_device_create_query_set');
  late final _wgpu_device_create_query_set =
      _wgpu_device_create_query_setPtr.asFunction<
          WGpuQuerySet Function(
              WGpuDevice, ffi.Pointer<WGpuQuerySetDescriptor>)>();

  int wgpu_is_buffer(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_buffer(
      object,
    );
  }

  late final _wgpu_is_bufferPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_buffer');
  late final _wgpu_is_buffer =
      _wgpu_is_bufferPtr.asFunction<int Function(WGpuObjectBase)>();

  void wgpu_buffer_map_async(
    WGpuBuffer buffer,
    WGpuBufferMapCallback callback,
    ffi.Pointer<ffi.Void> userData,
    int mode,
    int offset,
    int size,
  ) {
    return _wgpu_buffer_map_async(
      buffer,
      callback,
      userData,
      mode,
      offset,
      size,
    );
  }

  late final _wgpu_buffer_map_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuBuffer,
              WGpuBufferMapCallback,
              ffi.Pointer<ffi.Void>,
              WGPU_MAP_MODE_FLAGS,
              double_int53_t,
              double_int53_t)>>('wgpu_buffer_map_async');
  late final _wgpu_buffer_map_async = _wgpu_buffer_map_asyncPtr.asFunction<
      void Function(WGpuBuffer, WGpuBufferMapCallback, ffi.Pointer<ffi.Void>,
          int, int, int)>();

  void wgpu_buffer_map_sync(
    WGpuBuffer buffer,
    int mode,
    int offset,
    int size,
  ) {
    return _wgpu_buffer_map_sync(
      buffer,
      mode,
      offset,
      size,
    );
  }

  late final _wgpu_buffer_map_syncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(WGpuBuffer, WGPU_MAP_MODE_FLAGS, double_int53_t,
              double_int53_t)>>('wgpu_buffer_map_sync');
  late final _wgpu_buffer_map_sync = _wgpu_buffer_map_syncPtr
      .asFunction<void Function(WGpuBuffer, int, int, int)>();

  ffi.Pointer<ffi.Void> wgpu_buffer_get_mapped_range(
    WGpuBuffer buffer,
    int startOffset,
    int size,
  ) {
    return _wgpu_buffer_get_mapped_range(
      buffer,
      startOffset,
      size,
    );
  }

  late final _wgpu_buffer_get_mapped_rangePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(WGpuBuffer, double_int53_t,
              double_int53_t)>>('wgpu_buffer_get_mapped_range');
  late final _wgpu_buffer_get_mapped_range = _wgpu_buffer_get_mapped_rangePtr
      .asFunction<ffi.Pointer<ffi.Void> Function(WGpuBuffer, int, int)>();

  void wgpu_buffer_read_mapped_range(
    WGpuBuffer buffer,
    int startOffset,
    int subOffset,
    ffi.Pointer<ffi.Void> dst,
    int size,
  ) {
    return _wgpu_buffer_read_mapped_range(
      buffer,
      startOffset,
      subOffset,
      dst,
      size,
    );
  }

  late final _wgpu_buffer_read_mapped_rangePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuBuffer,
              double_int53_t,
              double_int53_t,
              ffi.Pointer<ffi.Void>,
              double_int53_t)>>('wgpu_buffer_read_mapped_range');
  late final _wgpu_buffer_read_mapped_range =
      _wgpu_buffer_read_mapped_rangePtr.asFunction<
          void Function(WGpuBuffer, int, int, ffi.Pointer<ffi.Void>, int)>();

  void wgpu_buffer_write_mapped_range(
    WGpuBuffer buffer,
    int startOffset,
    int subOffset,
    ffi.Pointer<ffi.Void> src,
    int size,
  ) {
    return _wgpu_buffer_write_mapped_range(
      buffer,
      startOffset,
      subOffset,
      src,
      size,
    );
  }

  late final _wgpu_buffer_write_mapped_rangePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuBuffer,
              double_int53_t,
              double_int53_t,
              ffi.Pointer<ffi.Void>,
              double_int53_t)>>('wgpu_buffer_write_mapped_range');
  late final _wgpu_buffer_write_mapped_range =
      _wgpu_buffer_write_mapped_rangePtr.asFunction<
          void Function(WGpuBuffer, int, int, ffi.Pointer<ffi.Void>, int)>();

  void wgpu_buffer_unmap(
    WGpuBuffer buffer,
  ) {
    return _wgpu_buffer_unmap(
      buffer,
    );
  }

  late final _wgpu_buffer_unmapPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(WGpuBuffer)>>(
          'wgpu_buffer_unmap');
  late final _wgpu_buffer_unmap =
      _wgpu_buffer_unmapPtr.asFunction<void Function(WGpuBuffer)>();

  int wgpu_buffer_size(
    WGpuBuffer buffer,
  ) {
    return _wgpu_buffer_size(
      buffer,
    );
  }

  late final _wgpu_buffer_sizePtr =
      _lookup<ffi.NativeFunction<double_int53_t Function(WGpuBuffer)>>(
          'wgpu_buffer_size');
  late final _wgpu_buffer_size =
      _wgpu_buffer_sizePtr.asFunction<int Function(WGpuBuffer)>();

  int wgpu_buffer_usage(
    WGpuBuffer buffer,
  ) {
    return _wgpu_buffer_usage(
      buffer,
    );
  }

  late final _wgpu_buffer_usagePtr =
      _lookup<ffi.NativeFunction<WGPU_BUFFER_USAGE_FLAGS Function(WGpuBuffer)>>(
          'wgpu_buffer_usage');
  late final _wgpu_buffer_usage =
      _wgpu_buffer_usagePtr.asFunction<int Function(WGpuBuffer)>();

  int wgpu_buffer_map_state(
    WGpuBuffer buffer,
  ) {
    return _wgpu_buffer_map_state(
      buffer,
    );
  }

  late final _wgpu_buffer_map_statePtr =
      _lookup<ffi.NativeFunction<WGPU_BUFFER_MAP_STATE Function(WGpuBuffer)>>(
          'wgpu_buffer_map_state');
  late final _wgpu_buffer_map_state =
      _wgpu_buffer_map_statePtr.asFunction<int Function(WGpuBuffer)>();

  int wgpu_is_texture(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_texture(
      object,
    );
  }

  late final _wgpu_is_texturePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_texture');
  late final _wgpu_is_texture =
      _wgpu_is_texturePtr.asFunction<int Function(WGpuObjectBase)>();

  WGpuTextureView wgpu_texture_create_view(
    WGpuTexture texture,
    ffi.Pointer<WGpuTextureViewDescriptor> textureViewDesc,
  ) {
    return _wgpu_texture_create_view(
      texture,
      textureViewDesc,
    );
  }

  late final _wgpu_texture_create_viewPtr = _lookup<
          ffi.NativeFunction<
              WGpuTextureView Function(
                  WGpuTexture, ffi.Pointer<WGpuTextureViewDescriptor>)>>(
      'wgpu_texture_create_view');
  late final _wgpu_texture_create_view =
      _wgpu_texture_create_viewPtr.asFunction<
          WGpuTextureView Function(
              WGpuTexture, ffi.Pointer<WGpuTextureViewDescriptor>)>();

  WGpuTextureView wgpu_texture_create_view_simple(
    WGpuTexture texture,
  ) {
    return _wgpu_texture_create_view_simple(
      texture,
    );
  }

  late final _wgpu_texture_create_view_simplePtr =
      _lookup<ffi.NativeFunction<WGpuTextureView Function(WGpuTexture)>>(
          'wgpu_texture_create_view_simple');
  late final _wgpu_texture_create_view_simple =
      _wgpu_texture_create_view_simplePtr
          .asFunction<WGpuTextureView Function(WGpuTexture)>();

  int wgpu_texture_width(
    WGpuTexture texture,
  ) {
    return _wgpu_texture_width(
      texture,
    );
  }

  late final _wgpu_texture_widthPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(WGpuTexture)>>(
          'wgpu_texture_width');
  late final _wgpu_texture_width =
      _wgpu_texture_widthPtr.asFunction<int Function(WGpuTexture)>();

  int wgpu_texture_height(
    WGpuTexture texture,
  ) {
    return _wgpu_texture_height(
      texture,
    );
  }

  late final _wgpu_texture_heightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(WGpuTexture)>>(
          'wgpu_texture_height');
  late final _wgpu_texture_height =
      _wgpu_texture_heightPtr.asFunction<int Function(WGpuTexture)>();

  int wgpu_texture_depth_or_array_layers(
    WGpuTexture texture,
  ) {
    return _wgpu_texture_depth_or_array_layers(
      texture,
    );
  }

  late final _wgpu_texture_depth_or_array_layersPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(WGpuTexture)>>(
          'wgpu_texture_depth_or_array_layers');
  late final _wgpu_texture_depth_or_array_layers =
      _wgpu_texture_depth_or_array_layersPtr
          .asFunction<int Function(WGpuTexture)>();

  int wgpu_texture_mip_level_count(
    WGpuTexture texture,
  ) {
    return _wgpu_texture_mip_level_count(
      texture,
    );
  }

  late final _wgpu_texture_mip_level_countPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(WGpuTexture)>>(
          'wgpu_texture_mip_level_count');
  late final _wgpu_texture_mip_level_count =
      _wgpu_texture_mip_level_countPtr.asFunction<int Function(WGpuTexture)>();

  int wgpu_texture_sample_count(
    WGpuTexture texture,
  ) {
    return _wgpu_texture_sample_count(
      texture,
    );
  }

  late final _wgpu_texture_sample_countPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(WGpuTexture)>>(
          'wgpu_texture_sample_count');
  late final _wgpu_texture_sample_count =
      _wgpu_texture_sample_countPtr.asFunction<int Function(WGpuTexture)>();

  int wgpu_texture_dimension(
    WGpuTexture texture,
  ) {
    return _wgpu_texture_dimension(
      texture,
    );
  }

  late final _wgpu_texture_dimensionPtr =
      _lookup<ffi.NativeFunction<WGPU_TEXTURE_DIMENSION Function(WGpuTexture)>>(
          'wgpu_texture_dimension');
  late final _wgpu_texture_dimension =
      _wgpu_texture_dimensionPtr.asFunction<int Function(WGpuTexture)>();

  int wgpu_texture_format(
    WGpuTexture texture,
  ) {
    return _wgpu_texture_format(
      texture,
    );
  }

  late final _wgpu_texture_formatPtr =
      _lookup<ffi.NativeFunction<WGPU_TEXTURE_FORMAT Function(WGpuTexture)>>(
          'wgpu_texture_format');
  late final _wgpu_texture_format =
      _wgpu_texture_formatPtr.asFunction<int Function(WGpuTexture)>();

  int wgpu_texture_usage(
    WGpuTexture texture,
  ) {
    return _wgpu_texture_usage(
      texture,
    );
  }

  late final _wgpu_texture_usagePtr = _lookup<
          ffi.NativeFunction<WGPU_TEXTURE_USAGE_FLAGS Function(WGpuTexture)>>(
      'wgpu_texture_usage');
  late final _wgpu_texture_usage =
      _wgpu_texture_usagePtr.asFunction<int Function(WGpuTexture)>();

  late final ffi.Pointer<WGpuTextureDescriptor>
      _WGPU_TEXTURE_DESCRIPTOR_DEFAULT_INITIALIZER =
      _lookup<WGpuTextureDescriptor>(
          'WGPU_TEXTURE_DESCRIPTOR_DEFAULT_INITIALIZER');

  WGpuTextureDescriptor get WGPU_TEXTURE_DESCRIPTOR_DEFAULT_INITIALIZER =>
      _WGPU_TEXTURE_DESCRIPTOR_DEFAULT_INITIALIZER.ref;

  int wgpu_is_texture_view(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_texture_view(
      object,
    );
  }
